zeit.cms changes
================

1.27 (unreleased)
-----------------

- Markierungen für Inline-Assets (#5770).

- WebDAV-Metadaten werden in das XML des Link-Objekts kopiert (#5904).

Technisches
+++++++++++

- Basisklasse für Adapter, die WebDAVPropertys brauchen.

1.26.1 (2009-08-04)
-------------------

- DragAndDrop im Clipboard funktioniert wieder.

- Objektauswahl-Lightbox funktioniert wieder.

1.26 (2009-08-03)
-----------------

- Neues Feld »Product-Id« in den Standardmetadaten (#5819).

- printRessort als CommonMetadata hinzugefügt.

1.25 (2009-07-28)
-----------------

- Es ist jetzt nicht mehr möglich, dass das CMS das selbe Objekte zwei mal
  gleichzeitig veröffentlicht. Verschiedene Objekte werden weiterhin parallel
  veröffentlicht (#5579).

Technisches
+++++++++++

- JSONView verwendet busy-CSS-Klasse statt den Text "Loading"

- JSONView gibt JSON in den Deferreds als Ergebnis aus.

- Objectify-Bäume werden nur noch einmal pro Transaktion geladen.

- CMSContentSource gibt Auskunft über beinhaltete Content-Typen.

1.24 (2009-07-22)
-----------------

- SubRessort wird immer umgeschrieben, auch wenn es vorher einen ungültigen
  Wert hatte (#5431)

- Ungültige Ressorts und Unterressorts werden jetzt im CMS angezeigt (via
  #5431).

- Navigationsbaum wird asynchron geladen und zwischengespeichert. Dies sollte
  die Ladezeiten deutlich verbessern.

Technisches
+++++++++++

- ObjektReferenceWidget umgebaut damit die Suche integriert werden kann.

- Unterstüzung für `_p_changed` auf XML-Klassen.

- Icons werden mit vollem Pfad eingebunden (#5657).

- DragAndDrop-Panes werden anders zusammen gebaut.

- ObjectWidgets kompatibel zum Verwenden in einer Lightbox gemacht
  (deregistrieren von Events, etc.)

- ObjectWidget öffnet den Browser nur, wenn noch keiner auf der Seite vorhanden
  ist (relevant für CP-Editor).

1.23.2 (2009-06-18)
-------------------

- Repackaged 1.23.1 (setupools/svn 1.6 problem).

1.23.1 (2009-06-18)
-------------------
